Fix horizontal scroll

--- a/bitcoin/style.css
+++ b/bitcoin/style.css
@@ -41,6 +41,7 @@ html {
   font-size: 128%;
   height: 100vh;
   background-color: var(--color-red);
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 768px) {
@@ -52,6 +53,7 @@ html {
 body {
   overscroll-behavior-y: none;
   overscroll-behavior-x: none;
+  overflow-x: hidden;
   font-family: var(--font-primary);
   font-weight: 400;
   line-height: 1.3;
